# oneshot

./: .env.example  .env.skillsmp  .gitignore  .gitignore.example  .sops.yaml  .sops.yaml.example  AGENTS.md  ARCHIVED.md  CENTRAL_SECRETS.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  DOC_AUDIT.md  IMPLEMENTATION_CONTEXT.md  LLM-OVERVIEW.md  QUICKSTART.md  README.md  RETHINK.md  SHARING_ONESHOT.md  SOPS_STANDALONE.md  SPEC.md  V10-PLAN.md  V9-TO-V10.1.md  git_backup_template.md  how_to_improve_one_shot.md  improvements_reviewed.md  install.sh  llms.txt  one_shot.md  oneshot.sh  plan.md  repomix.config.json  test_output.txt  upgrade-v8.sh  upgrade-v9.sh
.cache/: last-update-check
.claude/: settings.json  skills_inventory.json
.janitor/: code-smells.json  commit-enrichments.json  config-drift.json  critical-files.json  cron-state.json  dead-ends.json  dep-graph.json  digest.md  doc-clusters.json  doc-crossrefs.json  doc-missing-frontmatter.json  doc-orphans.json  doc-recent-activity.json  doc-size-outliers.json  doc-staleness.json  events.jsonl  knowledge-risk.json  last-daily-run  last-summary.json  onboarding-state.json  onboarding.md  patterns.json  pending-tasks-prev.md  pending-tasks.md  project-type.json  provider-health.json  recent-focus.json  redo-queue.json  repo-pack.json  task-evals.jsonl  test-gaps.json  usage.jsonl
examples/weather-cli/: README.md  pyproject.toml
examples/weather-cli/.agent/: STATUS.md
examples/weather-cli/src/weather_cli/: __init__.py  __main__.py  api.py  display.py
examples/weather-cli/thoughts/plans/: weather-cli.md
(+655 files in other folders)
